[gd_scene load_steps=7 format=3 uid="uid://cfhnhw5xakf8h"]

[ext_resource type="TileSet" uid="uid://dmf374nr1o1wm" path="res://scenes/Objects/mystic_land_updated.tres" id="1_cpgek"]
[ext_resource type="Script" path="res://scripts/mystic_land3.gd" id="1_h4r2s"]
[ext_resource type="PackedScene" uid="uid://cxbsi15l23riy" path="res://scenes/skeleme.tscn" id="3_mvadn"]
[ext_resource type="PackedScene" uid="uid://dls7064xsrcy8" path="res://scenes/slime.tscn" id="4_kjr1n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30odo"]
size = Vector2(62, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w4ke"]
size = Vector2(62, 92)

[node name="mystic_land3" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_h4r2s")

[node name="Map" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_cpgek")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-1, 9, 4, 65535, 9, 4, 131071, 9, 4, 196607, 9, 4, 262143, 9, 4, 327679, 9, 4, 393215, 9, 4, 458751, 9, 4, 524287, 9, 4, 589823, 9, 4, 655359, 9, 4, 720895, 9, 4, 786431, 9, 4, 851967, 9, 4, 917503, 9, 4, 983039, 9, 4, 1048575, 9, 4, 1114111, 9, 4, 1179647, 9, 4, 1245183, 9, 8, 1310719, 9, 4, 1376255, 9, 4, 1441791, 9, 4, 1507327, 9, 4, 1572863, 9, 4, -65536, 9, 4, 0, 9, 4, 65536, 9, 4, 131072, 9, 4, 196608, 9, 4, 262144, 9, 4, 327680, 9, 4, 393216, 9, 4, 458752, 9, 4, 524288, 9, 4, 589824, 9, 4, 655360, 9, 4, 720896, 9, 4, 786432, 9, 4, 851968, 9, 4, 917504, 9, 4, 983040, 9, 4, 1048576, 9, 4, 1114112, 9, 8, 1179648, 9, 8, 1245184, 9, 4, 1310720, 9, 4, 1376256, 9, 4, 1441792, 9, 4, 1507328, 9, 4, -65535, 9, 4, 1, 9, 4, 65537, 9, 4, 131073, 9, 4, 196609, 9, 4, 262145, 9, 4, 327681, 9, 4, 393217, 393225, 6, 458753, 393225, 7, 524289, 9, 4, 589825, 9, 4, 655361, 9, 4, 720897, 9, 4, 786433, 9, 4, 851969, 9, 4, 917505, 9, 4, 983041, 9, 4, 1048577, 9, 4, 1114113, 9, 4, 1179649, 9, 4, 1245185, 9, 8, 1310721, 9, 4, 1376257, 9, 4, 1441793, 9, 4, 1507329, 9, 4, -65534, 9, 4, 2, 9, 4, 65538, 393225, 6, 131074, 393225, 7, 196610, 655369, 6, 262146, 655369, 7, 327682, 9, 4, 393218, 458761, 6, 458754, 458761, 7, 524290, 9, 4, 589826, 9, 4, 655362, 9, 4, 720898, 9, 4, 786434, 9, 4, 851970, 9, 4, 917506, 9, 4, 983042, 9, 4, 1048578, 9, 15, 1114114, 9, 8, 1179650, 720905, 9, 1245186, 9, 4, 1310722, 9, 4, 1376258, 9, 4, 1441794, 9, 4, 1507330, 9, 4, -65533, 9, 4, 3, 9, 4, 65539, 458761, 6, 131075, 458761, 7, 196611, 720905, 6, 262147, 720905, 7, 327683, 9, 4, 393219, 9, 4, 458755, 9, 4, 524291, 9, 4, 589827, 9, 4, 655363, 9, 4, 720899, 393225, 6, 786435, 393225, 7, 851971, 9, 4, 917507, 9, 4, 983043, 9, 4, 1048579, 9, 8, 1114115, 983049, 10, 1179651, 9, 8, 1245187, 9, 8, 1310723, 9, 4, 1376259, 9, 4, 1441795, 9, 4, 1507331, 9, 4, -65532, 9, 4, 4, 9, 4, 65540, 9, 4, 131076, 9, 4, 196612, 9, 4, 262148, 9, 4, 327684, 9, 4, 393220, 9, 4, 458756, 9, 4, 524292, 9, 4, 589828, 9, 4, 655364, 9, 4, 720900, 458761, 6, 786436, 458761, 7, 851972, 9, 4, 917508, 9, 4, 983044, 9, 4, 1048580, 9, 4, 1114116, 9, 4, 1179652, 9, 4, 1245188, 9, 4, 1310724, 9, 4, 1376260, 9, 4, 1441796, 9, 4, 1507332, 9, 4, -65531, 9, 4, 5, 9, 4, 65541, 9, 4, 131077, 9, 4, 196613, 9, 4, 262149, 9, 4, 327685, 9, 4, 393221, 9, 4, 458757, 9, 4, 524293, 9, 4, 589829, 655369, 6, 655365, 655369, 7, 720901, 9, 4, 786437, 9, 4, 851973, 9, 4, 917509, 9, 4, 983045, 9, 4, 1048581, 9, 8, 1114117, 9, 8, 1179653, 9, 8, 1245189, 9, 8, 1310725, 9, 4, 1376261, 9, 4, 1441797, 9, 4, 1507333, 9, 4, -65530, 9, 4, 6, 9, 4, 65542, 9, 4, 131078, 9, 4, 196614, 9, 4, 262150, 9, 4, 327686, 9, 4, 393222, 9, 4, 458758, 9, 4, 524294, 9, 4, 589830, 720905, 6, 655366, 720905, 7, 720902, 9, 4, 786438, 9, 4, 851974, 9, 4, 917510, 9, 4, 983046, 9, 4, 1048582, 9, 8, 1114118, 9, 8, 1179654, 9, 4, 1245190, 9, 4, 1310726, 9, 4, 1376262, 9, 4, 1441798, 9, 4, 1507334, 9, 4, -65529, 9, 4, 7, 9, 4, 65543, 9, 4, 131079, 9, 4, 196615, 9, 4, 262151, 9, 4, 327687, 9, 4, 393223, 9, 4, 458759, 9, 4, 524295, 9, 4, 589831, 9, 4, 655367, 9, 4, 720903, 9, 4, 786439, 9, 4, 851975, 9, 4, 917511, 9, 4, 983047, 9, 4, 1048583, 9, 8, 1114119, 9, 4, 1179655, 9, 8, 1245191, 9, 4, 1310727, 9, 4, 1376263, 9, 4, 1441799, 9, 4, 1507335, 9, 4, -65528, 9, 4, 8, 9, 4, 65544, 9, 4, 131080, 9, 4, 196616, 9, 4, 262152, 9, 4, 327688, 9, 4, 393224, 9, 4, 458760, 9, 4, 524296, 9, 4, 589832, 9, 4, 655368, 9, 4, 720904, 9, 4, 786440, 9, 4, 851976, 9, 4, 917512, 9, 4, 983048, 9, 4, 1048584, 9, 8, 1114120, 9, 8, 1179656, 9, 4, 1245192, 9, 4, 1310728, 9, 4, 1376264, 9, 4, 1441800, 9, 4, 1507336, 9, 4, -65527, 9, 4, 9, 9, 4, 65545, 9, 4, 131081, 9, 4, 196617, 9, 4, 262153, 655369, 6, 327689, 655369, 7, 393225, 9, 4, 458761, 393225, 6, 524297, 393225, 7, 589833, 9, 4, 655369, 9, 4, 720905, 9, 4, 786441, 9, 4, 851977, 196617, 12, 917513, 9, 4, 983049, 9, 4, 1048585, 917513, 9, 1114121, 983049, 10, 1179657, 9, 4, 1245193, 9, 4, 1310729, 9, 4, 1376265, 9, 4, 1441801, 9, 4, 1507337, 9, 4, -65526, 9, 4, 10, 9, 4, 65546, 9, 4, 131082, 9, 4, 196618, 9, 4, 262154, 720905, 6, 327690, 720905, 7, 393226, 9, 4, 458762, 458761, 6, 524298, 458761, 7, 589834, 9, 4, 655370, 9, 4, 720906, 9, 4, 786442, 9, 4, 851978, 9, 4, 917514, 9, 4, 983050, 9, 8, 1048586, 9, 8, 1114122, 720905, 9, 1179658, 9, 4, 1245194, 9, 4, 1310730, 9, 4, 1376266, 9, 4, 1441802, 9, 4, 1507338, 9, 4, -65525, 9, 4, 11, 9, 4, 65547, 9, 4, 131083, 9, 4, 196619, 9, 4, 262155, 9, 4, 327691, 9, 4, 393227, 9, 4, 458763, 9, 4, 524299, 9, 4, 589835, 9, 4, 655371, 9, 4, 720907, 9, 4, 786443, 9, 4, 851979, 9, 4, 917515, 9, 4, 983051, 9, 8, 1048587, 9, 8, 1114123, 9, 4, 1179659, 9, 4, 1245195, 9, 4, 1310731, 9, 4, 1376267, 9, 4, 1441803, 9, 4, 1507339, 9, 4, -65524, 9, 4, 12, 9, 4, 65548, 9, 4, 131084, 9, 4, 196620, 9, 4, 262156, 9, 4, 327692, 9, 4, 393228, 9, 4, 458764, 393225, 6, 524300, 393225, 7, 589836, 9, 4, 655372, 9, 4, 720908, 9, 4, 786444, 9, 4, 851980, 9, 4, 917516, 9, 4, 983052, 9, 8, 1048588, 9, 8, 1114124, 9, 4, 1179660, 9, 4, 1245196, 9, 4, 1310732, 9, 4, 1376268, 9, 4, 1441804, 9, 4, 1507340, 9, 4, -65523, 9, 4, 13, 9, 4, 65549, 9, 4, 131085, 9, 4, 196621, 9, 4, 262157, 9, 4, 327693, 9, 4, 393229, 9, 4, 458765, 458761, 6, 524301, 458761, 7, 589837, 9, 4, 655373, 9, 4, 720909, 9, 4, 786445, 9, 4, 851981, 9, 4, 917517, 9, 4, 983053, 9, 4, 1048589, 9, 8, 1114125, 9, 8, 1179661, 9, 4, 1245197, 9, 4, 1310733, 9, 4, 1376269, 9, 4, 1441805, 9, 4, 1507341, 9, 4, -65522, 9, 4, 14, 393225, 6, 65550, 393225, 7, 131086, 9, 4, 196622, 9, 4, 262158, 9, 4, 327694, 9, 4, 393230, 9, 4, 458766, 9, 4, 524302, 9, 4, 589838, 9, 4, 655374, 9, 4, 720910, 9, 4, 786446, 9, 4, 851982, 9, 4, 917518, 720905, 9, 983054, 9, 4, 1048590, 9, 4, 1114126, 9, 4, 1179662, 9, 4, 1245198, 9, 4, 1310734, 9, 4, 1376270, 9, 4, 1441806, 9, 4, 1507342, 9, 4, -65521, 9, 4, 15, 458761, 6, 65551, 458761, 7, 131087, 9, 4, 196623, 9, 4, 262159, 9, 4, 327695, 9, 4, 393231, 9, 4, 458767, 9, 4, 524303, 9, 4, 589839, 9, 4, 655375, 9, 4, 720911, 9, 4, 786447, 9, 4, 851983, 9, 4, 917519, 9, 8, 983055, 9, 8, 1048591, 9, 4, 1114127, 9, 4, 1179663, 9, 4, 1245199, 9, 4, 1310735, 9, 4, 1376271, 9, 4, 1441807, 9, 4, 1507343, 9, 4, -65520, 9, 4, 16, 9, 4, 65552, 9, 4, 131088, 9, 4, 196624, 9, 4, 262160, 9, 4, 327696, 9, 4, 393232, 9, 4, 458768, 9, 4, 524304, 9, 4, 589840, 9, 4, 655376, 9, 4, 720912, 9, 4, 786448, 9, 4, 851984, 9, 8, 917520, 9, 8, 983056, 9, 8, 1048592, 9, 4, 1114128, 655369, 14, 1179664, 9, 4, 1245200, 9, 4, 1310736, 9, 4, 1376272, 9, 4, 1441808, 9, 4, 1507344, 9, 4, -65519, 9, 4, 17, 9, 4, 65553, 9, 4, 131089, 9, 4, 196625, 9, 4, 262161, 9, 4, 327697, 9, 4, 393233, 9, 4, 458769, 9, 4, 524305, 9, 4, 589841, 9, 4, 655377, 9, 4, 720913, 9, 4, 786449, 9, 4, 851985, 9, 8, 917521, 983049, 10, 983057, 9, 8, 1048593, 9, 4, 1114129, 9, 4, 1179665, 9, 4, 1245201, 9, 4, 1310737, 9, 4, 1376273, 9, 4, 1441809, 9, 4, 1507345, 9, 4, -65518, 9, 4, 18, 9, 4, 65554, 9, 4, 131090, 9, 4, 196626, 9, 4, 262162, 9, 4, 327698, 9, 4, 393234, 9, 4, 458770, 9, 4, 524306, 9, 4, 589842, 9, 4, 655378, 9, 4, 720914, 9, 4, 786450, 9, 4, 851986, 9, 4, 917522, 9, 4, 983058, 9, 4, 1048594, 9, 4, 1114130, 9, 4, 1179666, 9, 4, 1245202, 9, 4, 1310738, 393225, 6, 1376274, 393225, 7, 1441810, 9, 4, 1507346, 9, 4, -65517, 9, 4, 19, 393225, 6, 65555, 393225, 7, 131091, 9, 4, 196627, 393225, 6, 262163, 393225, 7, 327699, 9, 4, 393235, 9, 4, 458771, 9, 4, 524307, 9, 4, 589843, 655369, 14, 655379, 9, 4, 720915, 9, 15, 786451, 9, 8, 851987, 9, 8, 917523, 9, 4, 983059, 9, 8, 1048595, 9, 4, 1114131, 9, 4, 1179667, 9, 4, 1245203, 9, 4, 1310739, 458761, 6, 1376275, 458761, 7, 1441811, 9, 4, 1507347, 9, 4, -65516, 9, 4, 20, 458761, 6, 65556, 458761, 7, 131092, 9, 4, 196628, 458761, 6, 262164, 458761, 7, 327700, 9, 4, 393236, 9, 4, 458772, 9, 4, 524308, 9, 4, 589844, 9, 4, 655380, 9, 4, 720916, 9, 8, 786452, 9, 4, 851988, 9, 8, 917524, 9, 8, 983060, 9, 8, 1048596, 9, 4, 1114132, 9, 4, 1179668, 9, 4, 1245204, 9, 4, 1310740, 9, 4, 1376276, 9, 4, 1441812, 9, 4, 1507348, 9, 4, -65515, 9, 4, 21, 9, 4, 65557, 9, 4, 131093, 655369, 6, 196629, 655369, 7, 262165, 9, 4, 327701, 9, 4, 393237, 9, 4, 458773, 9, 4, 524309, 9, 4, 589845, 9, 4, 655381, 9, 4, 720917, 9, 4, 786453, 9, 8, 851989, 9, 8, 917525, 9, 4, 983061, 9, 4, 1048597, 9, 4, 1114133, 9, 4, 1179669, 9, 4, 1245205, 9, 4, 1310741, 9, 4, 1376277, 9, 4, 1441813, 9, 4, 1507349, 9, 4, -65514, 9, 4, 22, 9, 4, 65558, 9, 4, 131094, 720905, 6, 196630, 720905, 7, 262166, 9, 4, 327702, 9, 4, 393238, 9, 4, 458774, 9, 4, 524310, 9, 4, 589846, 9, 4, 655382, 9, 4, 720918, 9, 8, 786454, 9, 4, 851990, 9, 4, 917526, 9, 8, 983062, 720905, 9, 1048598, 9, 4, 1114134, 9, 4, 1179670, 9, 4, 1245206, 9, 4, 1310742, 9, 4, 1376278, 9, 4, 1441814, 9, 4, 1507350, 9, 4, -65513, 9, 4, 23, 9, 4, 65559, 9, 4, 131095, 9, 4, 196631, 9, 4, 262167, 9, 4, 327703, 9, 4, 393239, 9, 4, 458775, 9, 4, 524311, 9, 4, 589847, 9, 4, 655383, 9, 4, 720919, 9, 8, 786455, 983049, 10, 851991, 9, 4, 917527, 9, 4, 983063, 983049, 10, 1048599, 9, 4, 1114135, 9, 4, 1179671, 9, 4, 1245207, 9, 4, 1310743, 9, 4, 1376279, 9, 4, 1441815, 9, 4, 1507351, 9, 4, -65512, 9, 4, 24, 9, 4, 65560, 9, 4, 131096, 9, 4, 196632, 9, 4, 262168, 393225, 6, 327704, 393225, 7, 393240, 9, 4, 458776, 9, 4, 524312, 9, 4, 589848, 9, 4, 655384, 9, 4, 720920, 9, 8, 786456, 9, 8, 851992, 9, 4, 917528, 9, 4, 983064, 9, 4, 1048600, 9, 4, 1114136, 9, 4, 1179672, 9, 4, 1245208, 9, 4, 1310744, 9, 4, 1376280, 9, 4, 1441816, 9, 4, 1507352, 9, 4, -65511, 9, 4, 25, 9, 4, 65561, 9, 4, 131097, 9, 4, 196633, 9, 4, 262169, 458761, 6, 327705, 458761, 7, 393241, 9, 4, 458777, 9, 4, 524313, 9, 4, 589849, 9, 4, 655385, 9, 8, 720921, 9, 4, 786457, 9, 4, 851993, 9, 4, 917529, 9, 8, 983065, 9, 4, 1048601, 9, 4, 1114137, 9, 4, 1179673, 9, 4, 1245209, 9, 4, 1310745, 9, 4, 1376281, 655369, 6, 1441817, 655369, 7, 1507353, 9, 4, -65510, 9, 4, 26, 9, 4, 65562, 9, 4, 131098, 9, 4, 196634, 9, 4, 262170, 9, 4, 327706, 9, 4, 393242, 9, 4, 458778, 9, 4, 524314, 9, 4, 589850, 9, 4, 655386, 9, 8, 720922, 9, 8, 786458, 9, 8, 851994, 9, 4, 917530, 9, 4, 983066, 9, 4, 1048602, 9, 4, 1114138, 9, 4, 1179674, 9, 4, 1245210, 9, 4, 1310746, 9, 4, 1376282, 720905, 6, 1441818, 720905, 7, 1507354, 9, 4, -65509, 9, 4, 27, 9, 4, 65563, 9, 4, 131099, 9, 4, 196635, 9, 4, 262171, 9, 4, 327707, 9, 4, 393243, 9, 4, 458779, 9, 4, 524315, 9, 4, 589851, 9, 4, 655387, 9, 4, 720923, 9, 4, 786459, 9, 8, 851995, 9, 4, 917531, 9, 4, 983067, 9, 4, 1048603, 9, 4, 1114139, 9, 4, 1179675, 9, 4, 1245211, 9, 4, 1310747, 9, 4, 1376283, 9, 4, 1441819, 9, 4, 1507355, 9, 4, -65508, 9, 4, 28, 9, 4, 65564, 9, 4, 131100, 9, 4, 196636, 9, 4, 262172, 9, 4, 327708, 9, 4, 393244, 9, 4, 458780, 9, 4, 524316, 9, 4, 589852, 9, 4, 655388, 9, 8, 720924, 9, 8, 786460, 983049, 10, 851996, 9, 8, 917532, 9, 4, 983068, 9, 4, 1048604, 9, 4, 1114140, 9, 4, 1179676, 393225, 6, 1245212, 393225, 7, 1310748, 9, 4, 1376284, 9, 4, 1441820, 9, 4, 1507356, 9, 4, -65507, 9, 4, 29, 9, 4, 65565, 393225, 6, 131101, 393225, 7, 196637, 9, 4, 262173, 9, 4, 327709, 9, 4, 393245, 9, 4, 458781, 9, 4, 524317, 9, 15, 589853, 9, 8, 655389, 9, 8, 720925, 720905, 9, 786461, 9, 8, 851997, 9, 4, 917533, 9, 4, 983069, 9, 4, 1048605, 9, 4, 1114141, 9, 4, 1179677, 458761, 6, 1245213, 458761, 7, 1310749, 9, 4, 1376285, 9, 4, 1441821, 9, 4, 1507357, 9, 4, -65506, 9, 4, 30, 9, 4, 65566, 458761, 6, 131102, 458761, 7, 196638, 9, 4, 262174, 9, 4, 327710, 9, 4, 393246, 9, 4, 458782, 9, 4, 524318, 983049, 10, 589854, 9, 8, 655390, 9, 4, 720926, 720905, 9, 786462, 9, 8, 851998, 9, 4, 917534, 9, 4, 983070, 9, 4, 1048606, 9, 4, 1114142, 9, 4, 1179678, 9, 4, 1245214, 9, 4, 1310750, 9, 4, 1376286, 9, 4, 1441822, 9, 4, 1507358, 9, 4, -65505, 9, 4, 31, 9, 4, 65567, 655369, 6, 131103, 655369, 7, 196639, 9, 4, 262175, 9, 4, 327711, 9, 4, 393247, 9, 4, 458783, 9, 4, 524319, 9, 8, 589855, 9, 8, 655391, 9, 8, 720927, 9, 4, 786463, 9, 4, 851999, 9, 4, 917535, 9, 4, 983071, 9, 4, 1048607, 9, 4, 1114143, 9, 4, 1179679, 9, 4, 1245215, 9, 4, 1310751, 9, 4, 1376287, 9, 4, 1441823, 9, 4, 1507359, 9, 4, -65504, 9, 4, 32, 9, 4, 65568, 720905, 6, 131104, 720905, 7, 196640, 9, 4, 262176, 9, 4, 327712, 9, 4, 393248, 9, 4, 458784, 9, 4, 524320, 9, 8, 589856, 9, 4, 655392, 9, 4, 720928, 9, 8, 786464, 9, 4, 852000, 9, 4, 917536, 9, 4, 983072, 9, 4, 1048608, 9, 4, 1114144, 9, 4, 1179680, 9, 4, 1245216, 9, 4, 1310752, 9, 4, 1376288, 9, 4, 1441824, 9, 4, 1507360, 9, 4, -65503, 9, 4, 33, 9, 4, 65569, 9, 4, 131105, 9, 4, 196641, 9, 4, 262177, 9, 4, 327713, 9, 4, 393249, 9, 4, 458785, 9, 8, 524321, 9, 8, 589857, 9, 4, 655393, 9, 8, 720929, 9, 8, 786465, 9, 4, 852001, 9, 4, 917537, 9, 4, 983073, 9, 4, 1048609, 9, 4, 1114145, 9, 4, 1179681, 9, 4, 1245217, 9, 4, 1310753, 9, 4, 1376289, 9, 4, 1441825, 9, 4, 1507361, 9, 4, -65502, 9, 4, 34, 9, 4, 65570, 9, 4, 131106, 9, 4, 196642, 9, 4, 262178, 9, 4, 327714, 9, 4, 393250, 9, 4, 458786, 9, 8, 524322, 9, 8, 589858, 9, 8, 655394, 9, 8, 720930, 9, 4, 786466, 9, 4, 852002, 655369, 6, 917538, 655369, 7, 983074, 9, 4, 1048610, 9, 4, 1114146, 655369, 6, 1179682, 655369, 7, 1245218, 9, 4, 1310754, 9, 4, 1376290, 9, 4, 1441826, 9, 4, 1507362, 9, 4, -65501, 9, 4, 35, 393225, 6, 65571, 393225, 7, 131107, 9, 4, 196643, 9, 4, 262179, 9, 4, 327715, 9, 4, 393251, 9, 8, 458787, 720905, 9, 524323, 9, 4, 589859, 9, 4, 655395, 9, 4, 720931, 9, 4, 786467, 393225, 6, 852003, 720905, 6, 917539, 720905, 7, 983075, 9, 4, 1048611, 9, 4, 1114147, 720905, 6, 1179683, 720905, 7, 1245219, 9, 4, 1310755, 9, 4, 1376291, 9, 4, 1441827, 9, 4, 1507363, 9, 4, -65500, 9, 4, 36, 458761, 6, 65572, 458761, 7, 131108, 9, 4, 196644, 9, 4, 262180, 9, 4, 327716, 9, 8, 393252, 9, 8, 458788, 9, 8, 524324, 9, 8, 589860, 9, 8, 655396, 9, 4, 720932, 9, 4, 786468, 458761, 6, 852004, 458761, 7, 917540, 9, 4, 983076, 9, 4, 1048612, 9, 4, 1114148, 9, 4, 1179684, 9, 4, 1245220, 9, 4, 1310756, 9, 4, 1376292, 9, 4, 1441828, 9, 4, 1507364, 9, 4, -65499, 9, 4, 37, 9, 4, 65573, 9, 4, 131109, 9, 4, 196645, 9, 4, 262181, 9, 4, 327717, 9, 4, 393253, 9, 8, 458789, 983049, 10, 524325, 9, 8, 589861, 9, 4, 655397, 9, 4, 720933, 9, 4, 786469, 9, 4, 852005, 9, 4, 917541, 9, 4, 983077, 9, 4, 1048613, 9, 4, 1114149, 9, 4, 1179685, 9, 4, 1245221, 9, 4, 1310757, 9, 4, 1376293, 9, 4, 1441829, 9, 4, 1507365, 9, 4, -65498, 9, 4, 38, 9, 4, 65574, 9, 4, 131110, 9, 4, 196646, 9, 4, 262182, 9, 8, 327718, 9, 4, 393254, 9, 8, 458790, 9, 4, 524326, 9, 8, 589862, 9, 4, 655398, 9, 8, 720934, 9, 4, 786470, 9, 4, 852006, 9, 4, 917542, 9, 4, 983078, 9, 4, 1048614, 9, 4, 1114150, 9, 4, 1179686, 9, 4, 1245222, 9, 4, 1310758, 9, 4, 1376294, 9, 4, 1441830, 9, 4, 1507366, 9, 4)
layer_1/name = "Environment"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(851979, 65541, 1, 1114130, 65541, 1, 589846, 65541, 1, 851999, 65541, 1, 393248, 65541, 1, 1310728, 786446, 0, 786438, 786446, 0, 393233, 786446, 0, 327707, 786446, 0, 1114147, 786446, 0, 589837, 14, 9, 1048599, 14, 9, 196639, 851982, 10, 917507, 655374, 8, 917512, 262158, 4, 1114127, 262158, 4, 1048583, 131086, 4, 589851, 393230, 4, 655394, 393230, 4, 786447, 65549, 3, 786448, 131085, 3, 786449, 196621, 3, 1048592, 65549, 3, 1048593, 131085, 3, 1048594, 196621, 3, 1114111, 65549, 3, 1048576, 131085, 3, 1048577, 196621, 3, 393245, 65549, 3, 393246, 131085, 3, 393247, 196621, 3, 720932, 65549, 3, 720933, 131085, 3, 720934, 196621, 3, 917531, 65549, 3, 917532, 131085, 3, 917533, 196621, 3, 131079, 65551, 1)

[node name="Transition to ML4" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition to ML4"]
position = Vector2(655, 130)
shape = SubResource("RectangleShape2D_30odo")

[node name="WorldBoundary" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WorldBoundary"]
position = Vector2(1, 1)
polygon = PackedVector2Array(0, 5, 621, 4, 621, 84, 665, 84, 664, 156, 621, 158, 617, 350, -24, 356, -23, 271, 0, 271, 3, 1, -40, 392, 657, 407, 683, -32)

[node name="Transition to ML2" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Transition to ML2"]
position = Vector2(-32, 312)
shape = SubResource("RectangleShape2D_7w4ke")

[node name="Skeleme" parent="." instance=ExtResource("3_mvadn")]
position = Vector2(184, 273)

[node name="Slime" parent="." instance=ExtResource("4_kjr1n")]
position = Vector2(320, 234)

[node name="Skeleme2" parent="." instance=ExtResource("3_mvadn")]
position = Vector2(305, 62)

[node name="Slime2" parent="." instance=ExtResource("4_kjr1n")]
position = Vector2(480, 328)

[node name="Skeleme3" parent="." instance=ExtResource("3_mvadn")]
position = Vector2(596, 252)

[node name="Slime3" parent="." instance=ExtResource("4_kjr1n")]
position = Vector2(51, 112)

[connection signal="body_entered" from="Transition to ML4" to="." method="_on_transition_to_ml_4_body_entered"]
[connection signal="body_entered" from="Transition to ML2" to="." method="_on_transition_to_ml_3_body_entered"]
[connection signal="body_entered" from="Transition to ML2" to="." method="_on_transition_to_ml_2_body_entered"]
